--- a/src/sass/components/_globals.scss
+++ b/src/sass/components/_globals.scss
@@ -1,4 +1,13 @@
 
+$color-bg: #2F4858;
+$color-primary: #556c7b;
+$color-secondary: #007C7E;
+
+$font-base: 'Roboto', sans-serif;
+
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +17,8 @@
 
 html {
     font-size: 62.5%;
-}
-
-body {
-    background-color: rgb(175, 175, 175);
+    width: 100%;
+    color: white;
+    background-color: $color-bg;
+    font-family: $font-base;
 }
