--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,27 +1,32 @@
 .header {
-    width: 80vw;
-    height: 90px;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    padding: 0 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-
+    background-color: $color-primary;
+    box-shadow: 0px 16px 27px -19px rgba(0,0,0,1);
+    
     &-logo {
         height: 100%;
-        width: 30%;
+        display: grid;
+        place-items: center;
         img {
-            width: 150px;
+            width: 120px;
         }
     }
 
     &-nav {
+        
+        a {
+            display: inline-block;
+            margin: 0 5px;
+        }
 
-        &-logo {
-
-            height: 30px;
-            img {
-                width: 30px;
-                height: 30px;
-            }
+        img {
+            width: 30px;
         }
     }
 }
