--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -3,6 +3,7 @@
     height: calc(100vh - 60px);
     .character {
         width: 100%;
+        padding: 0 10px 20px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -12,9 +13,7 @@
             height: 300px;
             border-radius: 49px;
             background: $color-primary;
-            -webkit-box-shadow: 4px 4px 40px -9px rgba(0,0,0,1);
--moz-box-shadow: 4px 4px 40px -9px rgba(0,0,0,1);
-box-shadow: 4px 4px 40px -9px rgba(0,0,0,1);
+            box-shadow: 4px 4px 40px -9px rgba(0,0,0,1);
 
             a {
                 text-decoration: none;
