--- a/src/sass/components/_character.scss
+++ b/src/sass/components/_character.scss
@@ -3,16 +3,19 @@
     display: grid;
     place-items: center;
     text-align: center;
-
-
+    &-container {
+        border: solid 1px $color-secondary;
+        width: 250px;
+        min-height: 350px;
+        padding: 20px;
+    }
     &-main {
-        margin-top: 20px;
         img {
             width: 180px;
             border-radius: 50px;
         }
         h2 {
-            font-size: 3.0rem;
+            font-size: 2.5rem;
         }
     }
 
