--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -1,6 +1,8 @@
 .main {
     padding-top: 20px;
     height: calc(100vh - 60px);
+    max-width: 1000px;
+    margin: 0 auto;
     .character {
         width: 100%;
         padding: 0 10px 20px;
