--- a/src/sass/components/_character.scss
+++ b/src/sass/components/_character.scss
@@ -21,6 +21,7 @@
             top: 5px;
             font-size: 2.0rem;
             font-weight: bold;
+            text-decoration: none;
         }
     }
     &-main {
