Se agrega el filtro y el diseño base

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import './components/globals';
 @import './components/header';
+@import './components/filter';
 @import './components/main';
 @import './components/character';
 @import './components/modal';
