--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -12,27 +12,28 @@
         gap: 30px;
         article {
             width: 200px;
-            height: 300px;
+            // height: 300px;
             border-radius: 49px;
             background: $color-primary;
             box-shadow: 4px 4px 40px -9px rgba(0,0,0,1);
-
+            padding-top: 20px;
             a {
                 text-decoration: none;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                padding-top: 10px;
                 text-align: center;
+                height: 285px;
                 img {
                     width: 180px;
                     border-radius: 50%;
-                    margin-bottom: 30px;
+                    margin-bottom: 20px;
                 }
     
                 h2 {
                     font-size: 2.0rem;
                     color: white;
+                    margin-top: 10px;
                 }
             }
         }
